--- a/src/App.css
+++ b/src/App.css
@@ -1,17 +1,12 @@
+
+* {
+  background: lightblue;
+}
+
 .App {
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
 
 .App-header {
   background-color: #282c34;
@@ -24,15 +19,38 @@
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+#title {
+  border: solid black 2px;
+  padding: 10px;
+  margin-top: 10px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+#type {
+  margin-top: 40px;
+  font-weight: bold;
 }
+
+#search {
+  margin-top: 30px;
+  
+}
+
+#weatherName {
+  margin-top: 40px;
+}
+
+.btn {
+  cursor: pointer;
+}
+
+#changeF {
+  margin-right: 10px;
+}
+
+#changeC {
+  margin-left: 10px;
+}
+
+/* #buttons {
+
+} */
